--- a/html/index/index.html
+++ b/html/index/index.html
@@ -39,6 +39,10 @@
                     <a class="CONTROL_BLOCK_NAME">Насос</a>
                     <a class="CONTROL_BLOCK_STATE">Выкл</a>
                 </div>
+                <div class="CONTROLLER_BLOCK_OFF">
+                    <a class="CONTROL_BLOCK_NAME">Авто</a>
+                    <a class="CONTROL_BLOCK_STATE">Выкл</a>
+                </div>
             </div>
             <div class="TIME_BLOCK">
                 <a></a>
